# RandomFPL

./: .gitignore  GemFile  README.md  _config.yml  fantasy_random.py  index.md  myrandom_team.txt  pyproject.toml
.github/workflows/: coverage.yml  jekyll-gh-pages.yml  pre-commit.yml  python-app.yml
randomfpl/: __init__.py  fantasy_random.py
tests/: test_generate_team.py
