[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "randomfpl"
version = "0.0.1"
dependencies = [
    "pandas",
    "fpl",
    "prettytable",
    "matplotlib",
]

[project.scripts]
randomfpl = "randomfpl:main"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
